--- a/GameCollitions/assets/resources/Config/gameConfig.json
+++ b/GameCollitions/assets/resources/Config/gameConfig.json
@@ -2,5 +2,6 @@
     "gamePath": "games/",
     "normalPath": "res/games/normal/",
     "specialPath": "res/games/special/",
+    "Url": "https://vicat.wang/GameRes/",
     "games": ["SolitaireWin", "21-Cash", "SpiderRush", "DaubCash", "BubbleGold", "Bust-A-Move", "FruitPunch", "FishJump"]
 }
