--- a/GameCollitions/settings/project.json
+++ b/GameCollitions/settings/project.json
@@ -5,8 +5,8 @@
       true
     ]
   ],
-  "design-resolution-height": 960,
-  "design-resolution-width": 640,
+  "design-resolution-height": 1920,
+  "design-resolution-width": 1080,
   "excluded-modules": [],
   "facebook": {
     "appID": "",
@@ -30,6 +30,5 @@
     "width": 960
   },
   "use-customize-simulator": true,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": false
 }
