--- a/GameCollitions/settings/project.json
+++ b/GameCollitions/settings/project.json
@@ -27,13 +27,12 @@
   "group-list": [
     "default"
   ],
-  "last-module-event-record-time": 1599550709900,
+  "last-module-event-record-time": 1616057385974,
   "simulator-orientation": false,
   "simulator-resolution": {
     "height": 640,
     "width": 960
   },
   "use-customize-simulator": true,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": false
 }
